--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,9 @@
+:root {
+  --chy-primary:rgb(255,184,209);
+  --chy-secondary:rgb(125,79,80);
+  --chy-tertiary:rgb(38,35,34);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -8,6 +14,5 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: Poppins,'proxima-nova','Helvetica Neue',Helvetica,Arial,sans-serif;
 }
